TEST_PROGRAMS/VALID/05/array_of_slices_of_arrays.go
/* Array of slices of arrays.  */

package main

var a [10][][20] int

func main() {
	// Do nothing.
}
