TEST_PROGRAMS/INVALID/05/fallthrough_id.go
/* fallthrough as an identifier. */

package main

var fallthrough[10] int // Error: Can't use fallthrough as an identifier.

func main() {
	// Do nothing
}
